# job-copilot

./: .env.example  .gitignore  CLAUDE.md  README.md  railway.toml  render.yaml  start-extension.ps1  start.ps1
apps/backend/: .env.example  Dockerfile  pyproject.toml
apps/backend/src/job_copilot_api/: config.py  deps.py  main.py
apps/backend/src/job_copilot_api/prompts/: field_mapping.md
apps/backend/src/job_copilot_api/routers/: ai.py  applications.py  cv.py  forms.py  jd.py  personas.py  profiles.py
apps/backend/src/job_copilot_api/schemas/: __init__.py  application.py  cv_profile.py  form_field.py  jd.py  mapping.py  writer.py
apps/backend/src/job_copilot_api/services/: auth.py  cv_parser.py  db.py  embeddings.py  jd_analyzer.py  llm.py  mapping.py  store.py  writer.py
apps/backend/tests/: conftest.py  test_api.py  test_health.py  test_jd.py  test_mapping.py  test_personas.py  test_writer.py
apps/extension/: .env.example  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/extension/src/: background.ts  options.tsx  popup.tsx
apps/extension/src/contents/: form-detector.ts
apps/extension/src/contents/adapters/: ashby.ts  greenhouse.ts  lever.ts  workday.ts
apps/extension/src/lib/: api.ts  auth.ts  dom.ts  inject.ts  platform-detect.ts  settings.ts
apps/extension/src/types/: shared.ts
docs/: architecture.md
