[project]
name = "job-copilot-api"
version = "0.1.0"
description = "FastAPI backend for the Job Copilot Chrome extension."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.4",
    "python-multipart>=0.0.9",
    "structlog>=24.1",
    "pypdf>=4.3",
    "python-docx>=1.1",
    "rapidfuzz>=3.9",
    "openai>=1.40",
    "anthropic>=0.34",
    "python-jose[cryptography]>=3.3",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/job_copilot_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
